@@ -15,7 +15,7 @@
 .*:17: Error: .*
 .*:18: Error: .*
 .*:19: Error: .*
-.*:20: Error: .*
+.*:20: (Warning|Error): .*
 .*:21: Error: .*
 .*:22: Error: .*
 .*:23: Error: .*
@@ -51,9 +51,9 @@
 .*:53: Error: .*
 .*:54: Error: .*
 .*:55: Error: .*
-.*:56: (Warning|Error): .*
+.*:56: Error: .*
 .*:57: Error: .*
-.*:58: Error: .*
+.*:58: (Warning|Error): .*
 .*:59: Error: .*
 .*:60: Error: .*
 .*:61: Error: .*
@@ -71,13 +71,13 @@
 .*:73: Error: .*
 .*:74: Error: .*
 .*:75: Error: .*
+.*:76: Error: .*
 .*:77: Error: .*
-.*:78: Error: .*
-.*:89: Error: .*
-.*:90: Error: .*
+.*:79: Error: .*
+.*:80: Error: .*
 .*:91: Error: .*
-.*:94: Error: .*
-.*:95: Error: .*
+.*:92: Error: .*
+.*:93: Error: .*
 .*:96: Error: .*
 .*:97: Error: .*
 .*:98: Error: .*
@@ -98,49 +98,51 @@
 .*:113: Error: .*
 .*:114: Error: .*
 .*:115: Error: .*
+.*:116: Error: .*
 .*:117: Error: .*
-.*:118: Error: .*
 .*:119: Error: .*
 .*:120: Error: .*
 .*:121: Error: .*
 .*:122: Error: .*
+.*:123: Error: .*
 .*:124: Error: .*
-.*:125: Error: .*
 .*:126: Error: .*
 .*:127: Error: .*
 .*:128: Error: .*
 .*:129: Error: .*
+.*:130: Error: .*
 .*:131: Error: .*
-.*:132: Error: .*
 .*:133: Error: .*
 .*:134: Error: .*
 .*:135: Error: .*
 .*:136: Error: .*
+.*:137: Error: .*
 .*:138: Error: .*
-.*:139: Error: .*
 .*:140: Error: .*
 .*:141: Error: .*
 .*:142: Error: .*
 .*:143: Error: .*
 .*:144: Error: .*
 .*:145: Error: .*
+.*:146: Error: .*
 .*:147: Error: .*
-.*:148: Error: .*
 .*:149: Error: .*
 .*:150: Error: .*
 .*:151: Error: .*
-#...
 .*:152: Error: .*
-#...
 .*:153: Error: .*
+#...
 .*:154: Error: .*
+#...
 .*:155: Error: .*
 .*:156: Error: .*
+.*:157: Error: .*
 .*:158: Error: .*
-.*:159: Error: .*
 .*:160: Error: .*
-.*:161: Warning: .*
-.*:162: Warning: .*
-.*:164: Error: .*
-.*:165: Warning: .*
-.*:165: Error: .*
+.*:161: Error: .*
+.*:162: Error: .*
+.*:163: Warning: .*
+.*:164: Warning: .*
+.*:166: Error: .*
+.*:167: Warning: .*
+.*:167: Error: .*
